crates/linear_type/tests/compile_fail/linear_non_exhaustive.rs
use linear_type::linear;

linear! {
    #[non_exhaustive]
    pub struct NonExhaustiveLinear(String);
}

fn main() {}
